# cortex

./: .gitignore  AGENTS.md  BACKLOG.md  BRAND.md  CECOPEL_2.0_Diagnostico_e_Roadmap.docx  CECOPEL_2.0_Mockup_Home_Colaborador.html  CODEX_BRIEFING.md  LEGADO_AUDIT.md  README.md  STATUS.md
.github/templates/: README.md  ci.yml.template
admin/: .env.local.example  .gitignore  README.md  middleware.ts  netlify.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
admin/app/: globals.css  layout.tsx
admin/app/(admin)/: layout.tsx
admin/app/login/: page.tsx
admin/components/: sidebar.tsx  topbar.tsx  ui.tsx
admin/lib/: api.ts  supabase.ts  utils.ts
api/: .air.toml  .env.example  .gitignore  Dockerfile  Makefile  README.md  fly.toml  go.mod  go.sum
api/cmd/server/: main.go
api/internal/auth/: auth.go
api/internal/config/: config.go
api/internal/db/: db.go
api/internal/handler/: balancete.go  busca.go  (+12 more)
robot/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
robot/src/: App.tsx  styles.css
robot/src-tauri/: Cargo.toml  tauri.conf.json
robot/src-tauri/icons/: README.txt  icon.icns
robot/src-tauri/src/: auth.rs  config.rs  error.rs  identifier.rs  main.rs  pipeline.rs  uploader.rs  watcher.rs
robot/src-tauri/src/parser/: dctfweb.rs  dirbi.rs  esocial.rs  mod.rs  sped.rs
web/: .env.local.example  README.md  middleware.ts  netlify.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx
web/components/: app-shell.tsx  sidebar.tsx  topbar.tsx  ui.tsx
web/lib/: api.ts  balancete.ts  irpf.ts  modulos.ts  supabase.ts  utils.ts
(+136 files in other folders)
