[package]
name = "cecopel-robot"
version = "0.1.0"
description = "Robô CECOPEL 2.0 — observa pasta, identifica SPED/guias e publica na API"
authors = ["CECOPEL"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cecopel_robot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"

# Async + tokio runtime já incluído pelo Tauri
tokio = { version = "1", features = ["full"] }

# File system watcher (cross-platform: FSEvents/ReadDirectoryChangesW/inotify)
notify = "6"
notify-debouncer-full = "0.3"

# HTTP client com TLS via rustls (sem dep nativa do OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hash
sha2 = "0.10"
hex = "0.4"

# Regex
regex = "1"

# Timestamps + UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Paths multi-plataforma
directories = "5"

# Erros
thiserror = "1"
anyhow = "1"

# Log estruturado
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Guarda token de auth no chaveiro do sistema (Keychain/Credential Vault/Secret Service)
keyring = "3"

# Encoding
percent-encoding = "2"

# XML
quick-xml = "0.36"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
